--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "dist/is-open-session.js",
   "types": "dist/is-open-session.d.ts",
   "scripts": {
-    "install": "tsc",
+    "prepublishOnly": "npm run compile",
+    "compile": "npm run clean && tsc",
+    "clean": "rm -rf  dist",
     "ava": "ava -s -v",
     "ava:fail-fast": "ava -s -v --fail-fast",
     "watch:ava": "nodemon -e 'ts json' -x 'npm run ava || true'",
@@ -18,6 +20,9 @@
     "push-with-tags": "git push origin master && git push origin --tags",
     "push-and-publish": "npm run push-with-tags && npm publish"
   },
+  "files": [
+    "dist/"
+  ],
   "husky": {
     "hooks": {
       "pre-push": "npm run typedoc && git add doc && (git commit -m 'Update documentation' || true)"
@@ -46,13 +51,12 @@
     "@strong-roots-capital/get-recent-sessions": "^1.0.3",
     "@strong-roots-capital/is-tradingview-format": "^1.2.2",
     "@strong-roots-capital/list-tradingview-formats": "^1.0.2",
-    "@types/node": "^10.12.18",
     "market-session": "^1.0.7",
     "moment": "^2.24.0",
-    "ow": "^0.12.0",
-    "typescript": "^3.2.2"
+    "ow": "^0.12.0"
   },
   "devDependencies": {
+    "@types/node": "^10.12.18",
     "ava": "^1.0.0",
     "codecov": "^3.1.0",
     "husky": "^1.3.1",
@@ -60,7 +64,8 @@
     "tap-nyc": "^1.0.3",
     "ts-node": "^7.0.1",
     "typedoc": "^0.13.0",
-    "typedoc-plugin-markdown": "^1.1.20"
+    "typedoc-plugin-markdown": "^1.1.20",
+    "typescript": "^3.2.2"
   },
   "ava": {
     "compileEnhancements": false,
