--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "@strong-roots-capital/is-open-session",
   "version": "1.0.4",
   "description": "Test to determine if a date falls inside a currently-open timeframe",
-  "main": "dist/is-open-session.js",
-  "types": "dist/is-open-session.d.ts",
+  "main": "dist/src/is-open-session.js",
+  "types": "dist/src/is-open-session.d.ts",
   "scripts": {
     "prepublishOnly": "npm run compile",
     "compile": "npm run clean && tsc",
@@ -13,7 +13,6 @@
     "watch:ava": "nodemon -e 'ts json' -x 'npm run ava || true'",
     "watch:ava:fail-fast": "nodemon -e 'ts json' -x 'npm run ava:fail-fast || true'",
     "test": "nyc ava",
-    "test:tap": "nyc ava --tap | tap-nyc",
     "coverage": "nyc report --reporter=text-lcov > coverage.lcov && codecov",
     "watch:test": "nodemon -e 'ts json' -x 'npm test || true'",
     "typedoc": "typedoc",
@@ -21,13 +20,8 @@
     "push-and-publish": "npm run push-with-tags && npm publish"
   },
   "files": [
-    "dist/"
+    "dist/src/"
   ],
-  "husky": {
-    "hooks": {
-      "pre-push": "npm run typedoc && git add doc && (git commit -m 'Update documentation' || true)"
-    }
-  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/strong-roots-capital/is-open-session.git"
@@ -47,25 +41,23 @@
   },
   "homepage": "https://github.com/strong-roots-capital/is-open-session",
   "dependencies": {
-    "@hamroctopus/utc-date": "^1.0.5",
-    "@strong-roots-capital/get-recent-sessions": "^1.0.3",
+    "@strong-roots-capital/get-recent-sessions": "^1.0.5",
     "@strong-roots-capital/is-tradingview-format": "^1.2.2",
     "@strong-roots-capital/list-tradingview-formats": "^1.0.2",
     "market-session": "^2.0.4",
-    "moment": "^2.24.0",
+    "od": "^1.0.0",
     "ow": "^0.12.0"
   },
   "devDependencies": {
-    "@types/node": "^10.12.18",
-    "ava": "^1.0.0",
+    "@types/node": "^12.12.7",
+    "ava": "^2.0.0",
     "codecov": "^3.1.0",
-    "husky": "^1.3.1",
+    "moment": "^2.24.0",
     "nyc": "^13.1.0",
-    "tap-nyc": "^1.0.3",
-    "ts-node": "^7.0.1",
-    "typedoc": "^0.13.0",
+    "ts-node": "^8.5.2",
+    "typedoc": "^0.14.2",
     "typedoc-plugin-markdown": "^1.1.20",
-    "typescript": "^3.2.2"
+    "typescript": "^3.7.2"
   },
   "ava": {
     "compileEnhancements": false,
